--- a/app/src/main/res/layout/step_2.xml
+++ b/app/src/main/res/layout/step_2.xml
@@ -22,8 +22,8 @@
         android:layout_width="300dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
+        android:textSize="18sp"
         android:text="Очень приятно познакомиться\nМеня зовут Споти.\nСколько тебе лет?"
-        android:textSize="14dp"
         android:textColor="@color/white"
         android:gravity="center"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:onClick="onStepSex"
+        android:onClick="onStep3"
         android:text="Продолжить"
         android:textAllCaps="false"
         android:background="@drawable/back"
