--- a/app/src/main/res/layout/step_3.xml
+++ b/app/src/main/res/layout/step_3.xml
@@ -1,63 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#0099FF"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView3"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:padding="5dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/back"
+        android:padding="5dp"
         android:src="@drawable/spoti"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:id="@+id/textView3"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
         android:layout_marginTop="20dp"
         android:textSize="18sp"
-        android:text="Привет, как тебя зовут?"
+        android:text="Ничего себе ты большой, целых ... лет\nКакого ты пола?"
         android:textColor="@color/white"
         android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+    <RadioButton
+        android:id="@+id/radiobutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/back"
-        android:textColor="@color/black"
-        android:gravity="center"
+        android:textColor="@color/white"
+        android:layout_marginRight="200dp"
+        android:text="Мужского"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <RadioButton
+        android:id="@+id/radiobutton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="200dp"
+        android:textColor="@color/white"
+        android:text="Женского"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radiobutton" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:onClick="onStep4"
         android:text="Продолжить"
-        android:onClick="onStepAge"
         android:textAllCaps="false"
         android:background="@drawable/back"
         android:textColor="#0099FF"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/radiobutton2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
