Разработанный Step_4. Осокин

--- a/app/src/main/res/layout/step_3.xml
+++ b/app/src/main/res/layout/step_3.xml
@@ -58,14 +58,16 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/back"
         android:onClick="onStep4"
         android:text="Продолжить"
         android:textAllCaps="false"
-        android:background="@drawable/back"
         android:textColor="#0099FF"
-        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radiobutton2"/>
+        app:layout_constraintTop_toBottomOf="@+id/radiobutton2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
