--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,12 +50,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:text="Продолжить"
-        android:onClick="onStepAge"
-        android:textAllCaps="false"
-        android:background="@drawable/back"
-        android:textColor="#0099FF"
         android:layout_marginTop="200dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/back"
+        android:onClick="onStepAge"
+        android:text="Продолжить"
+        android:textAllCaps="false"
+        android:textColor="#0099FF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
