--- a/app/src/main/res/layout/step_2.xml
+++ b/app/src/main/res/layout/step_2.xml
@@ -22,11 +22,13 @@
         android:layout_width="300dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
-        android:textSize="18sp"
+        android:layout_marginBottom="31dp"
+        android:gravity="center"
         android:text="Очень приятно познакомиться\nМеня зовут Споти.\nСколько тебе лет?"
         android:textColor="@color/white"
-        android:gravity="center"
+        android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -47,12 +49,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/back"
         android:onClick="onStep3"
         android:text="Продолжить"
         android:textAllCaps="false"
-        android:background="@drawable/back"
         android:textColor="#0099FF"
-        android:layout_marginTop="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
