--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,54 +12,60 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:padding="5dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/back"
-        android:src="@drawable/spoti"
+        android:onClick="onStepAge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spoti" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:layout_marginTop="20dp"
-        android:textSize="18sp"
-        android:text="Привет, как тебя зовут?"
+        android:text="Привет как тебя зовут?"
         android:textColor="@color/white"
-        android:gravity="center"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="30dp"
+        android:id="@+id/Name"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/back"
-        android:textColor="@color/black"
-        android:gravity="center"
+        android:ems="10"
+        android:hint="Введите текст"
+        android:inputType="text"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textColor="#0099FF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/back"
         android:onClick="onStepAge"
         android:text="Продолжить"
-        android:textAllCaps="false"
         android:textColor="#0099FF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
