--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/Name"
+        android:id="@+id/NameEdit"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
